// prisma/schema.prisma
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  name          String?
  password      String?   // 如果用 NextAuth 可不用，改用 OAuth
  habits        Habit[]
  checkins      Checkin[]
  groups        Group[]
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
}

model Group {
  id        String   @id @default(cuid())
  name      String
  color     String   @default("#6B7280")
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  habits    Habit[]
  createdAt DateTime @default(now())

  @@unique([name, userId])
  @@index([userId])
}

model Habit {
  id          String     @id @default(cuid())
  name        String
  description String?
  color       String     @default("#3B82F6")
  userId      String
  user        User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  groupId     String?
  group       Group?     @relation(fields: [groupId], references: [id], onDelete: SetNull)
  checkins    Checkin[]
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt

  @@index([userId])
  @@index([groupId])
}

model Checkin {
  id        String   @id @default(cuid())
  habitId   String
  habit     Habit    @relation(fields: [habitId], references: [id], onDelete: Cascade)
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  date      String   // YYYY-MM-DD 格式，直接用字符串，彻底避开时区问题
  note      String?  // 新增：打卡备注（最多100字符）
  createdAt DateTime @default(now())

  @@unique([habitId, date])
  @@index([userId, date])
}
